--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lenis": "^1.3.4",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
     "next": "15.3.1",
