--- a/package.json
+++ b/package.json
@@ -35,5 +35,11 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
-  }
+  }, 
+  "browserslist": [
+  "last 2 versions",
+  "not dead",
+  "> 0.2%",
+  "supports es6-module"
+]
 }
