--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
-  }, 
+  },
   "browserslist": [
-  "last 2 versions",
-  "not dead",
-  "> 0.2%",
-  "supports es6-module"
-]
+    "> 0.5%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
